# spum

./: .gitignore  .gitmodules  CMakeLists.txt
doc/spum/: Untitled.md
doc/spum/.obsidian/: workspace.json
source/: main.c  network.h  simulator.h  sp.h
source/cli/: CMakeLists.txt  cli.lua  main.c
source/client/: CMakeLists.txt  app.h  client.h  index.html  main.c  nuklear_demo.h
source/server/: CMakeLists.txt  lws.h  main.c  server.h
